--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,65 @@
-numpy==1.24.2
-pandas==1.5.3
-scikit-learn==1.2.1
+annotated-types==0.7.0
+anyio==4.6.0
+attrs==24.2.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
+contourpy==1.3.0
+cycler==0.12.1
+deprecation==2.1.0
+dnspython==2.6.1
+ecdsa==0.19.0
+email_validator==2.2.0
+exceptiongroup==1.2.2
+fastapi==0.115.0
+fonttools==4.53.1
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.2
+idna==3.10
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
+kiwisolver==1.4.7
+MarkupSafe==2.1.5
 matplotlib==3.7.0
-seaborn==0.12.2
-fastapi[all]==0.92.0
-uvicorn==0.20.0
-python-multipart==0.0.5
-pydantic==1.10.5
-pytest==7.2.1
+numpy==2.1.1
+orjson==3.10.7
+packaging==24.1
+pandas==2.2.3
+pillow==10.4.0
+pluggy==1.5.0
+pyasn1==0.6.1
 pycodestyle==2.10.0
+pydantic==2.9.2
+pydantic_core==2.23.4
+pyparsing==3.1.4
+pytest==7.2.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-jose==3.3.0
 python-keycloak==2.14.0
+python-multipart==0.0.5
+pytz==2024.2
+PyYAML==6.0.2
+requests==2.32.3
+requests-toolbelt==0.10.1
+rsa==4.9
+scikit-learn==1.5.2
+scipy==1.14.1
+seaborn==0.12.2
+six==1.16.0
+sniffio==1.3.1
+starlette==0.38.5
+threadpoolctl==3.5.0
+tomli==2.0.1
+typing_extensions==4.12.2
+tzdata==2024.1
+ujson==5.10.0
+urllib3==1.26.20
+uvicorn==0.20.0
+uvloop==0.20.0
+watchfiles==0.24.0
+websockets==13.1
