--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,12 +37,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: docker login
         run: | 
-          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD  
+          docker login -u anjolocotom -p 78025762Gz  
       - name: Build the Keycloak Docker image
-        run: docker build ./keycloak/docker --tag $DOCKER_USER/$REPO_NAME:keycloak
+        run: docker build ./keycloak/docker --tag anjolocotom/lab2:keycloak
       - name: Push the Keycloak Docker image
-        run: docker push $DOCKER_USER/$REPO_NAME:keycloak
+        run: docker push anjolocotom/lab2:keycloak
       - name: Build the Inference Service Docker image
-        run: docker build . --file docker/Dockerfile --tag $DOCKER_USER/$REPO_NAME:inference-service
+        run: docker build . --file docker/Dockerfile --tag anjolocotom/lab2:inference-service
       - name: Push the Inference Service Docker image
-        run: docker push $DOCKER_USER/$REPO_NAME:inference-service
+        run: docker push $DOCKER_USER/lab2:inference-service
